--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="content">
-					<h1><a href="#">Resume</a></h1>
+					<h1><a href="">Resume</a></h1>
 					<p>Klik Link di Bawah ini Untuk Melihat Profile Saya <a href="http://html5up.net"></a></p>
 					<ul class="actions">
-						<li><a href="index.html" class="button special icon">Submit</a></li>
+						<li><a href="Resume.html" class="button special icon">Submit</a></li>
 						
 					</ul>
 				</div>
